# chess_engine

./: .gitignore  CMakeLists.txt  README.md  analyze_elo.py  attacks_data.h  bench.cpp  bench.h  board.cpp  board.h  defs.h  draw.cpp  draw.h  epd.cpp  epd.h  evaluate.cpp  evaluate.h  main.cpp  movegen.cpp  movegen.h  run_elo_tests.py  search.cpp  search.h  tt.cpp  tt.h  uci.cpp  uci.h
.github/workflows/: ci.yml
tests/: bench_test.cpp  eval_test.cpp  perft_test.cpp  unit_test.cpp  wac.epd  wac_test.cpp
tools/: generate_attacks.py
